fixed too wide title page

--- a/assets/styles/input.css
+++ b/assets/styles/input.css
@@ -636,7 +636,6 @@ nav.active {
 /* #TITLE PAGE */
 .title-page {
     @apply text-white;
-    width: 100vw;
     height: 90vh;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 6fr;
