--- a/assets/styles/output.css
+++ b/assets/styles/output.css
@@ -1598,7 +1598,6 @@ nav.active {
 .title-page {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-  width: 100vw;
   height: 90vh;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 6fr;
